9. Изменить программу Tracker из 2-го модуля [#10039 #500976] refactor interface for use collections in methods 2